# Algopay

./: .pre-commit-config.yaml  README.md  example_employees.csv  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  pre-commit.yaml  publish.yml  tests.yaml
algo_pay/: __init__.py  notifier.py  payroll.py
algopay/: core.py
contracts/: generate_escrow.py
example_employee_data/: 3_example_employees.csv
examples/: escrow_demo.py  localnet_demo.py  notify_demo.py
p_ai/: __init__.py  core.py
tests/: test_core.py  test_escrow.py  test_payroll.py  test_transactions.py
